--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "homepage": "https://nabil-hriz.github.io/BlogPost",
   "name": "blogpost",
+  "homepage": "https://nabil-hriz.github.io/Blog-Post",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
   "deploy": "gh-pages -d dist"
