--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
     "framer-motion": "^12.23.12",
     "react": "^19.1.0",
